--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "EJERCICIO-DIA-2",
+  "name": "EJERCICIO_DIA_2_CURSO_AVIEGAS",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
