--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "EJERCICIO_SEGUNDO DIA_CURSO_AVIEGAS",
+  "name": "EJERCICIO_SEGUNDO_DIA_CURSOAVIEGAS",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c",
+    "watch": "rollup -c -w"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,9 @@
   "homepage": "https://github.com/ElmoreaBIM/EJERCICIO-DIA-2#readme",
   "dependencies": {
     "web-ifc": "0.0.25"
+  },
+  "devDependencies": {
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "rollup": "^2.58.0"
   }
 }
